<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/_header"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="220dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/header_design"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="7dp"
        android:layout_marginStart="240dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/header_blue"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/_loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="120dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/_loginToContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/_loginText"
        android:text="@string/please_login_to_continue"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/_loginToContinue"
        android:textColorHint="@color/white"
        android:layout_marginTop="40dp"
        app:endIconMode="clear_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:endIconTint="@color/white"
        android:layout_marginHorizontal="30dp">

        <EditText
            android:id="@+id/_loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:drawableStart="@drawable/_email_24"
            android:drawableTint="@color/white"
            android:drawablePadding="10dp"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:layout_marginHorizontal="30dp"
        app:passwordToggleEnabled="true"
        android:layout_below="@id/email"
        app:passwordToggleTint="@color/white">

        <EditText
            android:id="@+id/_loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/_lock_24"
            android:drawableTint="@color/white"
            android:drawablePadding="10dp"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/_forgotText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:gravity="end" />

    <Button
        android:id="@+id/_loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="35dp"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_below="@id/_forgotText"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/_create_accountText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_below="@id/_loginBtn"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center_horizontal|bottom"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"/>

</RelativeLayout>