<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".fragments.HomeFragment">

    <View
        android:id="@+id/_wave"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/buyer_wave"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/baseline_person_24"
        android:backgroundTint="@color/blue"
        android:scaleType="centerCrop"
        android:textColor="@color/white"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/_wave"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <EditText
                    android:id="@+id/_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:autofillHints="@string/search_here"
                    android:background="@drawable/edittext_background"
                    android:backgroundTint="@color/white"
                    android:hint="@string/search_here"
                    android:maxLines="1"
                    android:drawableEnd="@drawable/_search_24"
                    android:drawableTint="@color/blue"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/_txtCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/_search"
                    android:layout_marginTop="15dp"
                    android:text="@string/categories"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/_categoriesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/_txtCategories"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:id="@+id/_txtMaterial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/_categoriesRecyclerView"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/material"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/_seeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/_categoriesRecyclerView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/see_all"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/_materialRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/_txtMaterial"
                    android:layout_marginTop="15dp" />

            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>