<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".activities.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/_header"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="220dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/header_design"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="7dp"
        android:layout_marginStart="240dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/header_blue"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/_ForgotPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/_header"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/_ForgotPasswordText"
        android:textColorHint="@color/white"
        android:layout_marginTop="70dp"
        app:endIconMode="clear_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:endIconTint="@color/white"
        android:layout_marginHorizontal="30dp">

        <EditText
            android:id="@+id/_forgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_registered_email"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:drawableStart="@drawable/_email_24"
            android:drawableTint="@color/white"
            android:drawablePadding="10dp"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/_forgot_passwordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="35dp"
        android:text="@string/forgot"
        android:textColor="@color/blue"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        android:background="@drawable/button_background"
        android:layout_below="@id/email"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="16dp"/>

</RelativeLayout>